Edit java version